@@ -1,4 +1,10 @@
 
+2016-05-15  Brian Tiffin <btiffin@gnu.org>
+	* cobcrun.c : Added -M path/module command line option
+	  if path/ found, prepend to COB_LIBRARY_PATH
+	  if module (no slash) found, prepend to COB_PRE_LOAD
+	  may set both.
+
 2016-01-30  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net> 
 
 	* cobcrun.c (cobcrun_print_version): changed generation of build stamp
